// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots common/GenericError Component Message 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-root css-l6hioc-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
    >
      <img
        alt=""
        class="makeStyles-img"
        src="headlamp-broken.svg"
      />
      <h1
        class="MuiTypography-root MuiTypography-h1 makeStyles-h1 css-1kazmbo-MuiTypography-root"
      >
        Uh-oh! Something went wrong.
      </h1>
      <h2
        class="MuiTypography-root MuiTypography-h2 makeStyles-h2 css-1lpv617-MuiTypography-root"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 css-3hjpok-MuiTypography-root"
        >
          Not sure what to do!
        </h3>
      </h2>
    </div>
  </div>
</div>
`;

exports[`Storyshots common/GenericError Component Title 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-root css-l6hioc-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
    >
      <img
        alt=""
        class="makeStyles-img"
        src="headlamp-broken.svg"
      />
      <h1
        class="MuiTypography-root MuiTypography-h1 makeStyles-h1 css-1kazmbo-MuiTypography-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1gp6czg-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Oh no!
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </h1>
      <h2
        class="MuiTypography-root MuiTypography-h2 makeStyles-h2 css-1lpv617-MuiTypography-root"
      >
        Head back 
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-srrjpp-MuiTypography-root-MuiLink-root"
          href="/"
        >
          home
        </a>
        .
      </h2>
    </div>
  </div>
</div>
`;

exports[`Storyshots common/GenericError Default 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-root css-l6hioc-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
    >
      <img
        alt=""
        class="makeStyles-img"
        src="headlamp-broken.svg"
      />
      <h1
        class="MuiTypography-root MuiTypography-h1 makeStyles-h1 css-1kazmbo-MuiTypography-root"
      >
        Uh-oh! Something went wrong.
      </h1>
      <h2
        class="MuiTypography-root MuiTypography-h2 makeStyles-h2 css-1lpv617-MuiTypography-root"
      >
        Head back 
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-srrjpp-MuiTypography-root-MuiLink-root"
          href="/"
        >
          home
        </a>
        .
      </h2>
    </div>
  </div>
</div>
`;

exports[`Storyshots common/GenericError Different Image 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-root css-l6hioc-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
    >
      <img
        alt=""
        class="makeStyles-img"
        src="headlamp-404.svg"
      />
      <h1
        class="MuiTypography-root MuiTypography-h1 makeStyles-h1 css-1kazmbo-MuiTypography-root"
      >
        Uh-oh! Something went wrong.
      </h1>
      <h2
        class="MuiTypography-root MuiTypography-h2 makeStyles-h2 css-1lpv617-MuiTypography-root"
      >
        Head back 
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-srrjpp-MuiTypography-root-MuiLink-root"
          href="/"
        >
          home
        </a>
        .
      </h2>
    </div>
  </div>
</div>
`;

exports[`Storyshots common/GenericError Number Graphic 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-root css-l6hioc-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
    >
      404
      <h1
        class="MuiTypography-root MuiTypography-h1 makeStyles-h1 css-1kazmbo-MuiTypography-root"
      >
        Uh-oh! Something went wrong.
      </h1>
      <h2
        class="MuiTypography-root MuiTypography-h2 makeStyles-h2 css-1lpv617-MuiTypography-root"
      >
        Head back 
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-srrjpp-MuiTypography-root-MuiLink-root"
          href="/"
        >
          home
        </a>
        .
      </h2>
    </div>
  </div>
</div>
`;

exports[`Storyshots common/GenericError String Graphic 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-root css-l6hioc-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
    >
      <img
        alt=""
        class="makeStyles-img"
        src="Oh no!"
      />
      <h1
        class="MuiTypography-root MuiTypography-h1 makeStyles-h1 css-1kazmbo-MuiTypography-root"
      >
        Uh-oh! Something went wrong.
      </h1>
      <h2
        class="MuiTypography-root MuiTypography-h2 makeStyles-h2 css-1lpv617-MuiTypography-root"
      >
        Head back 
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-srrjpp-MuiTypography-root-MuiLink-root"
          href="/"
        >
          home
        </a>
        .
      </h2>
    </div>
  </div>
</div>
`;

exports[`Storyshots common/GenericError String Message 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-root css-l6hioc-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
    >
      <img
        alt=""
        class="makeStyles-img"
        src="headlamp-broken.svg"
      />
      <h1
        class="MuiTypography-root MuiTypography-h1 makeStyles-h1 css-1kazmbo-MuiTypography-root"
      >
        Uh-oh! Something went wrong.
      </h1>
      <h2
        class="MuiTypography-root MuiTypography-h2 makeStyles-h2 css-1lpv617-MuiTypography-root"
      >
        Not sure what to do!
      </h2>
    </div>
  </div>
</div>
`;
